fix card's min-height on safari

--- a/client/styles/card.less
+++ b/client/styles/card.less
@@ -3,7 +3,7 @@
 .nj-card {
     width: 100%;
     max-width: 768px;
-    min-height: auto;
+    min-height: 0;
     margin: 16px auto;
 }
 
